# fcitx5-virtualkeyboard-ui

./: CMakeLists.txt  README.md  config.h.in
.github/workflows/: build.yml
src/: CMakeLists.txt  classicui.h  inputwindow.cpp  inputwindow.h  virtualkeyboard.cpp  virtualkeyboard.h  virtualkeyboardanthy.cpp  virtualkeyboardanthy.h  virtualkeyboardchewing.cpp  virtualkeyboardchewing.h  virtualkeyboardcustom.cpp  virtualkeyboardcustom.h  virtualkeyboardhangul.cpp  virtualkeyboardhangul.h  virtualkeyboardi18n.cpp  virtualkeyboardi18n.h  virtualkeyboardlayout.cpp  virtualkeyboardlayout.h  virtualkeyboardpinyin.cpp  virtualkeyboardpinyin.h  virtualkeyboardrussian.cpp  virtualkeyboardrussian.h  virtualkeyboardui.conf.in.in  virtualkeyboardus.cpp  virtualkeyboardus.h  virtualkeygeneral.cpp  virtualkeygeneral.h  waylandinputwindow.cpp  waylandinputwindow.h  waylandui.cpp  xcbinputwindow.cpp
src/fcitx/: misc_p.h
src/fcitx-utils/: misc_p.h
src/fcitx-wayland/core/: display.h  wl_registry.cpp  wl_registry.h
src/keyboards/: CMakeLists.txt  README.ja.md  README.md  virtualkeyboardui-ja.json  virtualkeyboardui-ko.ext.json  virtualkeyboardui-ko.json  virtualkeyboardui-ru.ext.json  virtualkeyboardui-ru.json  virtualkeyboardui-us.ext.json  virtualkeyboardui-us.json  virtualkeyboardui-validator.cpp  virtualkeyboardui-zh_CN.ext.json  virtualkeyboardui-zh_CN.json  virtualkeyboardui-zh_TW.json
test/: CMakeLists.txt  keyboard-label-non-string.json  keyboard-label-null.json  keyboard-languagecode-non-string.json  keyboard-languagecode-null.json  keyboard-layeroffset-inverted.json  keyboard-layeroffset-non-array.json  keyboard-layeroffset-non-integer.json  keyboard-no-label.json  keyboard-no-languagecode.json  keyboard-no-layeroffset.json  keyboard-no-numberoflayers.json  keyboard-null.json  keyboard-numberoflayers-non-integer.json  keyboard-numberoflayers-null.json  malformed.json  markkey-null.json  markkey-width-null.json  markkey-width-string.json  metadata-no-keyboard.json  metadata-no-modeswitchkey.json  metadata-non-object.json  metadata-unknown-key.json  modeswitchkey-no-numberofstates.json  modeswitchkey-no-statelabel.json  modeswitchkey-null.json  modeswitchkey-numberofstates-non-integer.json  modeswitchkey-statelabel-non-array.json  modeswitchkey-statelabel-non-string.json  modeswitchkey-states-mismatch.json  normalkey-null.json  normalkey-width-null.json  normalkey-width-string.json  setup.sh  testkeyboardanthy.cpp  testkeyboardchewing.cpp  testkeyboardcustom.cpp  testkeyboardlayout.cpp  testkeyboardmetadata.cpp  testkeyboardpinyin.cpp  (+2 more)
